# cafe24-harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
cafe24_harness/: __init__.py  browser.py  cli.py  config.py  urls.py
cafe24_harness/claude/agents/: cafe24-evaluator.md  cafe24-planner.md
cafe24_harness/claude/commands/cafe24/: echeck.md  work.md
cafe24_harness/claude/memory/: MEMORY.md  feedback_cafe24_admin_no_bypass.md  feedback_client_report.md  feedback_detailed_code_explanation.md  feedback_never_commit_without_permission.md  feedback_session_first_response_length.md  persona_board_no.md  persona_image_paths.md  persona_skin_number.md
cafe24_harness/commands/: claude.py  doctor.py  hook.py  init.py  inspect_board.py  login.py  open.py  upgrade.py
cafe24_harness/knowledge/: cafe24_admin.md
cafe24_harness/skeletons/: board.yaml
cafe24_harness/templates/: config.yaml.tmpl  gitignore.tmpl
cafe24_harness/templates/hooks/: cafe24-session-start.sh
cafe24_harness/templates/selectors/: cafe24_board.yaml.tmpl
